--- a/back/package.json
+++ b/back/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kanap-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "API canapé",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
